--- a/OnlineEducation/Areas/HelpOnline/Views/AdminLevel3/Details.cshtml
+++ b/OnlineEducation/Areas/HelpOnline/Views/AdminLevel3/Details.cshtml
@@ -42,5 +42,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index/" + Model.ParentId)
 </p>
