--- a/OnlineEducation/Areas/HelpOnline/Views/Level3/Index.cshtml
+++ b/OnlineEducation/Areas/HelpOnline/Views/Level3/Index.cshtml
@@ -29,9 +29,9 @@
         </div>
         <div class="col-sm-9 ">
             <div class="row floatRight">
-                <a id="ToPDFContent" href="@theFirstLink">Email</a> |
+                <a id="ToEmail" href="@theFirstLink">Email</a> |
                 <a id="ToPDFContent" href="@theFirstLink">PDF</a> |
-                <a id="ToPDFContent" href="@theFirstLink">Print</a> 
+                <a id="ToPrint" href="#" onclick="printiFrame()">Print</a> 
                
             </div>
             <div class="row">
